@@ -13,6 +13,9 @@ version 26-git (????-??-??):
   - improvement: customer balance box: in aggregate document mode show document comment for invoice
     transformed from pro forma [chilan]
   - improvement: allow to manipulate ticket categories during new note add [chilan]
+  - improvement: 'phpui.delete_related_customer_resources' configuration variable allows to specify
+    which customer related resources are removed during not-permanent customer delete process
+    ('assignments,customergroups,nodegroups,nodes,userpanel' by default) [chilan]
 
 version 25.0 (2020-05-15):
 
